unpackaged/main/default/objects/CS_Revenue_Schedule__c/CS_Revenue_Schedule__c.object-meta.xml
<CustomObject>
    <description>Header record for Revenue Recognition line items at Product Configuration level</description>
    <label>Revenue Schedule</label>
    <nameField>
        <displayFormat>REV-{00000000}</displayFormat>
        <label>Revenue Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>