unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The sibling Billing Schedule header for the same SOLI</description>
    <inlineHelpText>The sibling Billing Schedule header for the same SOLI</inlineHelpText>
    <label>Billing Schedule</label>
    <referenceTo>CS_Billing_Schedule__c</referenceTo>
    <relationshipLabel>Revenue Schedule</relationshipLabel>
    <relationshipName>Revenue_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>