unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/CS_Sales_Order_Schedule__c.field-meta.xml
<CustomField>
    <fullName>CS_Sales_Order_Schedule__c</fullName>
    <description>Link to Sales Order Schedule</description>
    <inlineHelpText>Link to Sales Order Schedule</inlineHelpText>
    <label>CS Sales Order Schedule</label>
    <referenceTo>CS_Sales_Order_Schedule__c</referenceTo>
    <relationshipName>Revenue_Schedule_Headers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>