unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/DFP_Actuals_Rollup__c.field-meta.xml
<CustomField>
    <fullName>DFP_Actuals_Rollup__c</fullName>
    <description>Field to Aggregate: Revenue Schedule Item: DFP Actuals</description>
    <inlineHelpText>Field to Aggregate: Revenue Schedule Item: DFP Actuals</inlineHelpText>
    <label>DFP Actuals Rollup</label>
    <summarizedField>CS_Revenue_Schedule_Item__c.DFP_Actuals__c</summarizedField>
    <summaryForeignKey>CS_Revenue_Schedule_Item__c.Revenue_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>