unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Hold_Revenue_For_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Hold_Revenue_For_Sales_Order__c</fullName>
    <description>Determines if the whole SO should be put on hold</description>
    <formula>CS_Sales_Order_Schedule__r.Sales_Order_Revenue_On_Hold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determines if the whole SO should be put on hold</inlineHelpText>
    <label>Hold Revenue For Sales Order</label>
    <type>Checkbox</type>
</CustomField>