unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Last_Revenue_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Last_Revenue_Period_End__c</fullName>
    <description>MAX(Revenue period End Date) from items</description>
    <inlineHelpText>MAX(Revenue period End Date) from items</inlineHelpText>
    <label>Last Revenue Period End</label>
    <summarizedField>CS_Revenue_Schedule_Item__c.Rev_Rec_Period_End_Date__c</summarizedField>
    <summaryForeignKey>CS_Revenue_Schedule_Item__c.Revenue_Schedule__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>