unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Next_Rev_Rec_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Rev_Rec_Date__c</fullName>
    <label>Next Rev Rec Date</label>
    <summarizedField>CS_Revenue_Schedule_Item__c.Rev_Rec_Date__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Revenue_Schedule_Item__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Revenue_Schedule_Item__c.Revenue_Schedule__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>