unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Open_After_Rev_Rec_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_After_Rev_Rec_Date__c</fullName>
    <label>Open After Rev Rec Date</label>
    <summaryForeignKey>CS_Revenue_Schedule_Item__c.Revenue_Schedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>