unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Pending_Forecast_Recalculation__c.field-meta.xml
<CustomField>
    <fullName>Pending_Forecast_Recalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies that the Revenue Forecast Schedule us due to be recalculated.</description>
    <inlineHelpText>Specifies that the Revenue Schedule us due to be recalculated.</inlineHelpText>
    <label>Pending Forecast Recalculation</label>
    <type>Checkbox</type>
</CustomField>