unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Product_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Product_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Product Configuration</description>
    <inlineHelpText>Link to Product Configuration</inlineHelpText>
    <label>Product Configuration</label>
    <referenceTo>cscfga__Product_Configuration__c</referenceTo>
    <relationshipName>Revenue_Schedule_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>