unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Revenue_on_Hold__c.field-meta.xml
<CustomField>
    <fullName>Revenue_on_Hold__c</fullName>
    <description>Indicates if any Revenue Schedule Items are On Hold</description>
    <inlineHelpText>Indicates if any Revenue Schedule Items are On Hold</inlineHelpText>
    <label>Revenue on Hold</label>
    <summaryFilterItems>
        <field>CS_Revenue_Schedule_Item__c.Manual_Hold__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Revenue_Schedule_Item__c.Revenue_Schedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>