unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Revenue_Schedule_Items_Pending_Count__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Schedule_Items_Pending_Count__c</fullName>
    <label>Revenue Schedule Items Pending Count</label>
    <summaryFilterItems>
        <field>CS_Revenue_Schedule_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Revenue_Schedule_Item__c.Revenue_Schedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>