unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Sales Order</description>
    <inlineHelpText>Link to the related Sales Order</inlineHelpText>
    <label>Sales Order</label>
    <referenceTo>csmso__Sales_Order__c</referenceTo>
    <relationshipName>Revenue_Schedule_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>