unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Sales_Order_Revenue_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Revenue_On_Hold__c</fullName>
    <formula>CS_Sales_Order_Schedule__r.Sales_Order_Revenue_On_Hold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Revenue On Hold</label>
    <type>Checkbox</type>
</CustomField>