unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Total_Billed_Quantity_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed_Quantity_To_Date__c</fullName>
    <formula>Billing_Schedule__r.Total_Billed_Quantity_To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billed Quantity To Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>