unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Total_Closed_DFP_Actuals__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_DFP_Actuals__c</fullName>
    <label>Total Closed DFP Actuals</label>
    <summarizedField>CS_Revenue_Schedule_Item__c.DFP_Actuals__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Revenue_Schedule_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Revenue_Schedule_Item__c.Revenue_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>