unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Total_Forecast_Amount_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Forecast_Amount_to_Date__c</fullName>
    <description>Roll up summary SUM Total_recognised from Rev Schedule Item. SUM (Total_Recognised__c) for Forecast Rows</description>
    <inlineHelpText>Roll up summary SUM Total_recognised from Rev Schedule Item. SUM (Total_Recognised__c) for Forecast Rows</inlineHelpText>
    <label>Total Forecast Amount To Date</label>
    <summarizedField>CS_Revenue_Schedule_Item__c.Forecast_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Revenue_Schedule_Item__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Closed, Pending Closure</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Revenue_Schedule_Item__c.Revenue_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>