unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Total_Forecast_Quantity_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Forecast_Quantity_To_Date__c</fullName>
    <description>Rollup Summary of Forecast Lines that are not yet closed(Forecast_Quantity__c)</description>
    <inlineHelpText>Rollup Summary of Forecast Lines that are not yet closed(Forecast_Quantity__c)</inlineHelpText>
    <label>Total Forecast Quantity To Date</label>
    <summarizedField>CS_Revenue_Schedule_Item__c.Forecast_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Revenue_Schedule_Item__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Closed, Pending Closure</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Revenue_Schedule_Item__c.Revenue_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>