unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Total_Locked_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Locked_Quantity__c</fullName>
    <label>Total Locked Quantity</label>
    <summarizedField>CS_Revenue_Schedule_Item__c.Rev_Rec_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Revenue_Schedule_Item__c.Is_Closed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Revenue_Schedule_Item__c.Revenue_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>