unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/Total_Recognised_Quantity_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Recognised_Quantity_To_Date__c</fullName>
    <description>Roll up summary SUM Total_recognised from Rev Schedule Item.</description>
    <inlineHelpText>Roll up summary SUM Total_recognised from Rev Schedule Item.</inlineHelpText>
    <label>Total Recognised Quantity To Date</label>
    <summarizedField>CS_Revenue_Schedule_Item__c.Rev_Rec_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Revenue_Schedule_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Closed, Pending Closure</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Revenue_Schedule_Item__c.Revenue_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>