unpackaged/main/default/objects/CS_Revenue_Schedule__c/fields/X3rd_Party_Actuals_Rollup__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Actuals_Rollup__c</fullName>
    <description>Field to Aggregate: Revenue Schedule Item: 3rd Party Actuals</description>
    <inlineHelpText>Field to Aggregate: Revenue Schedule Item: 3rd Party Actuals</inlineHelpText>
    <label>3rd Party Actuals Rollup</label>
    <summarizedField>CS_Revenue_Schedule_Item__c.X3rd_Party_Actuals__c</summarizedField>
    <summaryForeignKey>CS_Revenue_Schedule_Item__c.Revenue_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>